--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="description" content="Web sitemizde en yeni ürünlerle ilgili bilgi edinin.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>E-commerce Cyber Websites Project</title>
   </head>
   <body>
     <div id="root"></div>
